Made footer grow on hover and fixed technology cards look better on mobile devices

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -39,6 +39,7 @@ a img {
 
 .icons a:hover {
   transition-duration: 0.4s;
+  transform: scale(1.2);
 
   .icon {
     transition-duration: 0.4s;
